<resources>
    <string name="app_name">Bitacora</string>

    <!-- Menu Principal  -->
    <string name="boton_new">NUEVO</string>
    <string name="boton_item">VER ITEM</string>
    <string name="boton_ejercicio">VER EJERCICIO</string>
    <string name="boton_investgacion">VER INVESTIGACION</string>
    <string name="boton_5">Marketing</string>
    <string name="boton_6">Emprendedurismo</string>

    <!-- Layout Acerca de -->
    <string name="titulo_acerca_de">Mis Grupos</string>
    <string name="etiqueta_version_acerca_de">Versión</string>
    <string name="texto_version_acerca_de">1.0</string>
    <string name="InformaticaI">Aktion 2</string>
    <string name="hola">hola</string>
    <string name="string_boton_2" />

    <!-- lIST VIEW TEMAS -->
    <string name="titulo_list_view_temas">TEMAS</string>

    <!-- lIST VIEW MATERIAS -->
    <string name="titulo_list_view_materias">MATERIAS</string>
    <string name="new_materia">Nueva Materia</string>

    <!-- lIST VIEW BITACORAS -->
    <string name="new_bitacora">Nueva Bitacora</string>
    <string name="title_activity_ver_datos_temas">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_materia">Agregar Materia</string>


    <!-- NEW ACTIVITY  -->
    <string name="new_item">ITEM</string>
    <string name="new_investigacion">INVESTIGACION</string>
    <string name="new_ejercicio">EJERCICIO</string>

    <!-- BOTONES DE LOS MENÚS  -->
    <string name="menu_siguiente">Siguiente</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_guardar">GUARDAR</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_limpiar">Limpiar campos</string>


</resources>