<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewActivity" >



    <Button
        android:id="@+id/button"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="359dp"
        android:onClick="lanzarVistaAddInvestigacion"
        android:text="@string/new_investigacion"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="301dp"
        android:contentDescription="@string/boton_new"
        android:onClick="lanzarVistaAcercaDe"
        android:text="@string/new_ejercicio"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="140dp"
        android:onClick="lanzarVistaVerItem"
        android:text="@string/new_item"
        app:backgroundTint="#69BDC8" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="383dp"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/hola"
        android:onClick="lanzarVistaAcercaDe"
        android:src="@drawable/bitacora_logo" />

</RelativeLayout>