<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="py.com.misgruposv01.activities.ui.item.ItemFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="py.com.misgruposv01.activities.ui.ejercicio.EjercicioFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_ejercicio" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="py.com.misgruposv01.activities.ui.investigacion.InvestigacionFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_investigacion" />
</navigation>